# sector-scraper

./: .env-template  .gitignore  README.md  SECURITY.md  pyproject.toml
scripts/: homeautomation_init.py
sector_scraper/: configurator.py  main.py  parse.py  parser.py  sender.py
