[project]
name = "sector-scraper"
version = "0.1.1"
description = ""
authors = [{ name = "Falk", email = "andreas@mockel.se" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44.0",
    "mypy>=1.10.1",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "unidecode>=1.3.8",
    "pyyaml>=6.0.1",
    "ruamel-yaml>=0.18.6",
    "types-requests>=2.32.0.20240712",
    "requests>=2.33.1",
]

[project.scripts]
sector-scraper = "sector_scraper.main:main"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "bandit>=1.7.9",
    "coverage>=7.5.4",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "isort>=5.13.2",
    "flake8>=7.1.0",
    "ruff>=0.5.0",
    "ptpython>=3.0.27",
    "types-beautifulsoup4>=4.12.0.20240511",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
